update to README.md, fixed filter dropdown alignment, added mockups folder to assets

--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ span {
 .dropdown-item {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: flex-start;
   background-color: transparent;
   height: 85px;
 }
